# AinerVault

./: .gitignore  00.架构.md  01.ainer-gateway.md  02.ainer-orchestrator.md  03.ainer-entity-core.md  04.ainer-asset-knowledge.md  05.ainer-planner.md  06.ainer-model-router.md  07.ainer-worker-hub.md  08.ainer-worker-video.md  09.ainer-worker-audio.md  10.ainer-worker-llm.md  11.ainer-worker-lipsync.md  12.ainer-composer.md  13.ainer-observer.md  14.ainer-studio-web.md  AinerN2D_RunCenter_V3_Observable_DAG_MultiTrack_skill.md  BACKEND_SUPPORTED_CAPABILITIES.md  README_01_30_MASTER_INTEGRATION.md  README_14_20_INTEGRATION_GUIDE.md  README_21_22_INTEGRATION_GUIDE.md  README_23_30_PRODUCT_GAP_PLAN.md  SKILL_01_STORY_INGESTION_NORMALIZATION.md  SKILL_02_LANGUAGE_CONTEXT_ROUTER.md  SKILL_03_STORY_SCENE_SHOT_PLANNER.md  SKILL_04_ENTITY_EXTRACTION_STRUCTURING.md  SKILL_05_AUDIO_ASSET_PLANNER.md  SKILL_06_AUDIO_TIMELINE_COMPOSER.md  SKILL_07_ENTITY_CANONICALIZATION_CULTURAL_BINDING.md  SKILL_08_ASSET_MATCHER.md  SKILL_09_VISUAL_RENDER_PLANNER.md  SKILL_10_PROMPT_PLANNER.md  SKILL_11_RAG_KB_MANAGER.md  SKILL_12_RAG_PIPELINE_EMBEDDING.md  SKILL_13_FEEDBACK_EVOLUTION_LOOP.md  SKILL_14_PERSONA_STYLE_PACK_MANAGER.md  SKILL_15_CREATIVE_CONTROL_POLICY.md  SKILL_16_CRITIC_EVALUATION_SUITE.md  SKILL_17_EXPERIMENT_AB_TEST_ORCHESTRATOR.md  SKILL_18_FAILURE_RECOVERY_DEGRADATION_POLICY.md  (+20 more)
code/apps/: alembic.ini  pyproject.toml
code/apps/ainern2d-composer/: Dockerfile
code/apps/ainern2d-studio-api/: Dockerfile
code/apps/ainern2d-studio-web/: Dockerfile  index.html  package-lock.json  (+3 more)
(+385 files in other folders)
