[project]
name = "ainer-apps"
version = "0.1.0"
description = "Ainer service applications"
requires-python = ">=3.11"
dependencies = [
	"fastapi>=0.115.0",
	"pydantic>=2.9.0",
	"uvicorn>=0.30.0",
	"sqlalchemy>=2.0.0",
	"alembic>=1.13.0",
	"pika>=1.3.0",
	"loguru>=0.7.0",
	"httpx>=0.27.0",
	"langgraph>=0.3.0,<0.4.0",
	"python-multipart>=0.0.12",
	"ainern2d-shared",
	"pypdf>=4.0",
	"python-docx>=1.1",
	"openpyxl>=3.1",
	"Pillow>=10.0",
	"requests>=2.31.0",
]

[tool.setuptools.packages.find]
where = ["."]

[project.optional-dependencies]
dev = [
	"pytest>=8.0.0",
	"pytest-asyncio>=0.24.0",
	"httpx>=0.27.0",
]
